--- a/prj/fumi/index.html
+++ b/prj/fumi/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <div id="mapField"></div>
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCq0zjdkpQsltGmGdbML6gKjGBM4LXkiYQ&sensor=false"></script>
 <script>
 function mapInit() {
     var centerPosition = new google.maps.LatLng(35.011636, 135.768029);
