--- a/prj/fumi/index.html
+++ b/prj/fumi/index.html
@@ -5,8 +5,8 @@
 <title>Insert title here</title>
 <style>
 #mapField {
-  width: 100%;
-  height: 100%;
+     width: 500px;
+    height: 500px;
 }
 </style>
 
