--- a/prj/fumi/index.html
+++ b/prj/fumi/index.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link href="http://www.css-reset.com/css/meyer.css" media="screen, projection" rel="stylesheet" type="text/css" />
 <style>
 #mapField {
-     width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 1000px;
 }
 </style>
 
