--- a/prj/fumi/index.html
+++ b/prj/fumi/index.html
@@ -23,7 +23,7 @@ function mapInit() {
     g_centerPosition = new google.maps.LatLng(35.011636, 135.768029);
     var option = {
         zoom : 12,
-        center : centerPosition,
+        center : g_centerPosition,
         mapTypeId : google.maps.MapTypeId.ROADMAP
     };
     //地図本体描画
